# PyGw2Agg

./: .gitignore  README.md  generated_index.html  gw2ei_config.conf  pyproject.toml
pygw2agg/: main.py  settings_keys.py
pygw2agg/html/: 0template.html  full_template.j2  player_summary.j2
pygw2agg/io/: export_csv.py  generate_index.py  load_json.py  parse.py
pygw2agg/logic/: defense.py  main.py  offense.py  player.py  support.py  utility.py  utils.py
pygw2agg/models/aggregated/: base.py  defense.py  metadata.py  misc.py  offense.py  player.py  stat.py  support.py  utility.py
pygw2agg/models/common/: professions.py
pygw2agg/models/domain/: base.py  individual_player_log.py
pygw2agg/models/ei_output/: base_ei_model.py  log_data.py  player.py  player_buff_generation_stats.py  player_buff_uptime_stats.py  player_defenses_stats.py  player_dps_all_stats.py  player_dps_target_stats.py  player_misc_stats.py  player_support_stats.py
pygw2agg/ui/: exporting.py  layout.py  mapping.py  menu_bar.py  parsing.py  settings.py  table.py  table_model.py  user_bar.py  utils.py
tests/logic/: test_main.py  test_offense.py  test_player.py  test_support.py  test_utility.py
tests/models/aggregated/: test_aggregated_player.py
tests/ui/: test_mapping.py
