[tool.poetry]
name = "pygw2agg"
version = "0.1.0"
description = ""
authors = ["Aria <aria.jackson@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pysimplegui = "^4.60.5"
structlog = "^23.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
