[tool.poetry]
name = "pygw2agg"
version = "0.1.0"
description = ""
authors = ["Aria <aria.jackson@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
pysimplegui = "^4.60.5"
structlog = "^23.2.0"
pyinstaller = "^6.1.0"
pydantic = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
